Altered layout sizes, added voice trigger, shows up in menu now

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">Yu-Gi-Oh! Duel</string>
-    <string name="voice_menu_trigger">It\'s time to duel!</string>
+    <string name="voice_trigger_start">it\'s time to duel</string>
     <string name="initialLife">8000</string>
     <string name="enemyText">Enemy</string>
     <string name="userText">Me</string>
